--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -379,7 +379,7 @@ body {
 }
 
 .header {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)), url(../../img/samantha-gades-BlIhVfXbi9s-unsplash.jpg);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)), url(../img/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
